add some style and sorted the css files in underfolders

--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,4 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: sans-serif;
-  /* border: 3px;
-  border-color: rgb(255, 0, 43);
-  border-style: dotted; */
-}
-
-::after,
-::before {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.navigation_top {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 60px;
-  background-color: rgb(46, 46, 46);
-  position: fixed;
-  width: 100%;
-  top: 0;
-  margin-bottom: 60px;
-}
-
-h1 {
-  color: white;
-  font-size: 20px;
-}
-
-.navigation_top-links {
-  text-decoration: none;
-  color: rgb(63, 63, 234);
-  font-weight: bold;
-}
-
-.main {
-  margin-top: 70px;
-  margin-bottom: 70px;
-  color: white;
-}
-
-.berechnungstabelle {
-  margin: 5px;
-  background-color: rgb(46, 46, 46);
-  border-radius: 10%;
-}
-
-.personenanzahl {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-  padding: 10px;
-}
-
-.berechnen {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-  padding: 10px;
-}
-
-.berechnen_btn {
-  padding: 10px;
-  border-radius: 10%;
-  background-color: rgba(255, 255, 255, 0);
-  border: 3px;
-  border-color: rgb(63, 63, 234);
-  border-style: solid;
-  color: rgb(63, 63, 234);
-}
-
-.navigation_bottom {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  background-color: rgb(46, 46, 46);
-  height: 60px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.navigation_bottom-link {
-  text-decoration: none;
-  color: rgb(63, 63, 234);
-  font-weight: bold;
-}
+@import "/css/components/Header.css";
+@import "/css/components/Berechnungskarte.css";
+@import "/css/components/Footer.css";
+@import "/css/global.css";
