--- a/css/components/Header.css
+++ b/css/components/Header.css
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   height: 60px;
-  background-color: rgb(46, 46, 46);
+  background-color: rgba(60, 67, 77, 255);
   position: fixed;
   width: 100%;
   top: 0;
