--- a/css/components/Berechnungskarte.css
+++ b/css/components/Berechnungskarte.css
@@ -8,7 +8,7 @@
 
 .berechnungstabelle {
   margin: 5px;
-  background-color: rgb(46, 46, 46);
+  background-color: rgba(60, 67, 77, 255);
   border-radius: 10%;
   padding: 5px;
 }
@@ -32,12 +32,26 @@
 }
 
 .berechnen_btn {
+  margin-left: 8px;
   padding: 10px;
   border-radius: 10%;
   background-color: rgba(255, 255, 255, 0);
   border: 3px;
-  border-color: rgb(63, 63, 234);
+  border-color: rgb(80, 189, 252);
   border-style: solid;
-  color: rgb(63, 63, 234);
+  color: rgb(80, 189, 252);
   font-size: 17.5px;
+}
+
+.inputfield {
+  height: 64px;
+  width: 100%;
+  margin: 5px;
+  padding: 10px 10px;
+  border-radius: 10px;
+  border: none;
+  background-color: #373e49;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.212);
+  color: white;
+  font-size: 20px;
 }
