--- a/css/components/Berechnungskarte.css
+++ b/css/components/Berechnungskarte.css
@@ -8,7 +8,7 @@
 
 .berechnungstabelle {
   margin: 5px;
-  background-color: rgba(60, 67, 77, 255);
+  background-color: #529ead;
   border-radius: 10%;
   padding: 5px;
 }
@@ -32,15 +32,26 @@
 }
 
 .berechnen_btn {
-  margin-left: 8px;
+  margin-right: 7px;
   padding: 10px;
   border-radius: 10%;
   background-color: rgba(255, 255, 255, 0);
   border: 3px;
-  border-color: rgb(80, 189, 252);
+  border-color: #373e49;
   border-style: solid;
-  color: rgb(80, 189, 252);
+  color: #373e49;
   font-size: 17.5px;
+}
+
+.output {
+  margin-left: 8px;
+  background-color: #373e49;
+  color: #373e49;
+  width: 150px;
+  border-radius: 10%;
+  font-size: 20px;
+  padding: 10px 10px;
+  font: roboto;
 }
 
 .inputfield {
