--- a/css/components/Footer.css
+++ b/css/components/Footer.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   bottom: 0;
-  background-color: rgba(60, 67, 77, 255);
+  background-color: #fb7b5b;
   height: 60px;
   display: flex;
   justify-content: space-around;
