--- a/css/components/Berechnungskarte.css
+++ b/css/components/Berechnungskarte.css
@@ -35,11 +35,11 @@
   margin-right: 7px;
   padding: 10px;
   border-radius: 10%;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(255, 255, 255);
   border: 3px;
-  border-color: #373e49;
+  border-color: white;
   border-style: solid;
-  color: #373e49;
+  color: black;
   font-size: 17.5px;
 }
 
