--- a/css/components/Berechnungskarte.css
+++ b/css/components/Berechnungskarte.css
@@ -4,6 +4,7 @@
   margin-right: 10px;
   margin-left: 10px;
   color: white;
+  background-color: #529ead;
 }
 
 .berechnungstabelle {
@@ -18,6 +19,7 @@
   justify-content: space-between;
   margin: 10px;
   padding: 10px;
+  background-color: #373e4900;
 }
 
 .inputfield {
