fixed background color again

--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
   font-family: roboto;
-  background-color: #fb7b5b;
+  /* background-color: #fb7b5b; */
   /* border: 3px;
   border-color: rgb(255, 0, 43);
   border-style: dotted; */
