--- a/css/components/Berechnungskarte.css
+++ b/css/components/Berechnungskarte.css
@@ -1,8 +1,10 @@
 .main {
+  width: 100%;
+  height: 800px;
   margin-top: 70px;
-  margin-bottom: 70px;
+  /* margin-bottom: 70px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 10px; */
   color: white;
   background-color: #529ead;
 }
