--- a/css/global.css
+++ b/css/global.css
@@ -8,13 +8,13 @@
   padding: 0;
   margin: 0;
   font-family: roboto;
-  /* background-color: #fb7b5b; */
+
   /* border: 3px;
   border-color: rgb(255, 0, 43);
   border-style: dotted; */
 }
 
-nput::-webkit-outer-spin-button,
+input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
@@ -37,5 +37,7 @@ input[type="number"] {
 }
 
 body {
-  background-color: #529ead;
+  background-color: #fb7b5b;
+  margin: 0;
+  padding: 0;
 }
