--- a/css/components/Header.css
+++ b/css/components/Header.css
@@ -20,3 +20,9 @@ h1 {
   color: rgb(63, 63, 234);
   font-weight: bold;
 }
+
+.logo {
+  width: 120px;
+  border-radius: 10%;
+  border: black 2px solid;
+}
